--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -74,6 +74,12 @@ promtail:
     periodSeconds: 10
     successThreshold: 1
     failureThreshold: 5
+monitoring:
+  selfMonitoring:
+    enabled: false  # Disable self-monitoring to avoid Grafana Agent CRD
+    grafanaAgent:
+      enabled: false  # Explicitly disable Grafana Agent
+      installOperator: false
 
 
 
