Docker File Updated for BE, Update FE Template label

--- a/infra/addons/frontend/values.yaml
+++ b/infra/addons/frontend/values.yaml
@@ -5,6 +5,9 @@ image:
   tag: "latest"
   pullPolicy: IfNotPresent
 
+labels:
+  release: prometheus-stack-dev
+
 service:
   type: ClusterIP
   port: 80
