--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,7 +10,10 @@ WORKDIR /app
 
 # Copy package files and install dependencies
 COPY package*.json ./
-# RUN npm ci --only=production
+
+RUN npm ci --only=production
+
+RUN npm rebuild bcrypt
 
 # Copy application code
 COPY . .
