Update FE & BE values for serviceMonitoring

--- a/infra/config/dev/app/backend/values.yaml
+++ b/infra/config/dev/app/backend/values.yaml
@@ -2,8 +2,8 @@ replicaCount: 1
 
 namespace: dev
 
-labels:
-  release: prometheus-stack-dev
+# labels:
+#   release: prometheus-stack-dev
 
 image:
   pullPolicy: Always
