--- a/infra/addons/backend/templates/servicemonitor.yaml
+++ b/infra/addons/backend/templates/servicemonitor.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: {{ .Values.namespace }}
   labels:
     {{- include "backend.labels" . | nindent 4 }}
-    {{ .Values.labels }}
+    release: prometheus-stack-dev
 spec:
   selector:
     matchLabels:
