--- a/infra/addons/frontend/templates/servicemonitor.yaml
+++ b/infra/addons/frontend/templates/servicemonitor.yaml
@@ -6,7 +6,7 @@ metadata:
   name: {{ include "frontend.fullname" . }}
   labels:
     {{- include "frontend.labels" . | nindent 4 }}
-    {{ .Values.labels }}
+    release: prometheus-stack-dev
 spec:
   selector:
     matchLabels:
