--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.12.1",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
     "multer": "^1.4.5-lts.2",
+    "prom-client": "^15.1.3",
     "stripe": "^18.0.0",
     "winston": "^3.17.0"
   },
