Change Image PullPolicy for FE

--- a/infra/addons/frontend/values.yaml
+++ b/infra/addons/frontend/values.yaml
@@ -3,7 +3,7 @@ namespace: dev
 image:
   repository: kapilbhalodiya/ecom-frontend
   tag: "latest"
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 service:
   type: ClusterIP
