--- a/infra/config/application.yaml
+++ b/infra/config/application.yaml
@@ -10,13 +10,13 @@ spec:
           - git:
               pathParamPrefix: target
               repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
-              revision: main
+              revision: Dev-Metrics-Alternative-Monitoring-Approaches
               files:
                 - path: infra/config/*/values.yaml
           - git:
               pathParamPrefix: app
               repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
-              revision: main
+              revision: Dev-Metrics-Alternative-Monitoring-Approaches
               directories:
                 - path: infra/config/{{target.path.basename}}/*/*
   template:
@@ -26,7 +26,7 @@ spec:
       project: default
       source:
         repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
-        targetRevision: main
+        targetRevision: Dev-Metrics-Alternative-Monitoring-Approaches
         path: 'infra/addons/{{app.path.basename}}'
         helm:
           ignoreMissingValueFiles: true
@@ -42,7 +42,7 @@ spec:
         namespace: '{{target.path.basename}}'
       syncPolicy:
         automated:
-          prune: false  # Changed to true
-          selfHeal: true  # Changed to true
+          prune: true
+          selfHeal: false
         syncOptions:
         - CreateNamespace=true
