--- a/infra/addons/prometheus-stack/values.yaml
+++ b/infra/addons/prometheus-stack/values.yaml
@@ -120,7 +120,9 @@ grafana:
     type: ClusterIP
     port: 80
 
-
+kube-prometheus-stack:
+  crds:
+    enabled: true
 
 prometheus-node-exporter:
   enabled: true
