--- a/infra/addons/process-exporter/templates/daemonset.yaml
+++ b/infra/addons/process-exporter/templates/daemonset.yaml
@@ -22,12 +22,16 @@ spec:
         args:
         - --procfs=/host/proc
         - --web.listen-address=:{{ .Values.service.targetPort }}
+        - --config.path=/etc/process-exporter/process-exporter.yaml
         ports:
         - containerPort: {{ .Values.service.targetPort }}
           name: metrics
         volumeMounts:
         - name: proc
           mountPath: /host/proc
+          readOnly: true
+        - name: config
+          mountPath: /etc/process-exporter
           readOnly: true
         securityContext:
           runAsUser: 0
@@ -38,6 +42,9 @@ spec:
       - name: proc
         hostPath:
           path: /proc
+      - name: config
+        configMap:
+          name: {{ include "process-exporter.fullname" . }}-config
       tolerations:
       - key: node-role.kubernetes.io/master
         effect: NoSchedule
