--- a/infra/addons/ingress/values.yaml
+++ b/infra/addons/ingress/values.yaml
@@ -17,7 +17,7 @@ services:
   - name: backend
     serviceName: backend
     servicePort: 8000
-    path: /(api|uploads)
+    path: /api
     pathType: Prefix
 
 # Ingress controller settings
