Update Prefix for Ingress for Backned Upload

--- a/infra/addons/ingress/values.yaml
+++ b/infra/addons/ingress/values.yaml
@@ -19,6 +19,11 @@ services:
     servicePort: 8000
     path: /api
     pathType: Prefix
+  - name: backend-uploads
+    serviceName: backend
+    servicePort: 8000
+    path: /uploads
+    pathType: Prefix
 
 # Ingress controller settings
 ingressClass: nginx
