Update End and secret

--- a/infra/addons/backend/templates/deployment.yaml
+++ b/infra/addons/backend/templates/deployment.yaml
@@ -23,6 +23,12 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+          env:
+            - name: STRIPE_SECRET_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: backend-secrets
+                  key: stripe-secret-key
           resources:
             requests:
               cpu: "100m"
