--- a/infra/addons/backend/templates/secret.yaml
+++ b/infra/addons/backend/templates/secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: backend-mongodb-secret
   namespace: {{ .Values.namespace }}
 type: Opaque
-stringData:
-  mongodb-uri: "mongodb://kapil001:UspGS7dAe8lxbEVQ@mongodb.dev.svc.cluster.local:27017"
+data:
+  stripe-secret-key: c2tfdGVzdF81MVJFUDNMREJ4WGh3YTlrMnh5YVJRS2Rqa1VpQnBVSjdNU0U1Z2hLT0k0ZzlJTWRCVFlGZUEzTlVyWVB1UEJUZ1c5Wk9SY1ZSNzJ6REVkcW1Vb0s0SjJ5VjAwdXJ3SjN1b2M=
