--- a/infra/addons/backend/values.yaml
+++ b/infra/addons/backend/values.yaml
@@ -7,7 +7,8 @@ image:
   pullPolicy: Always
 
 env:
-  MONGODB_URI: ""  # We'll set this dynamically in the deployment
+  MONGODB_URI: "mongodb://mongodb-service:27017/ecommerce"
+  NODE_ENV: "production"
 
 service:
   type: ClusterIP
