--- a/infra/addons/backend/templates/secret.yaml
+++ b/infra/addons/backend/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: backend-mongodb-secret
+  name: backend-secrets
   namespace: {{ .Values.namespace }}
 type: Opaque
 data:
