--- a/infra/addons/backend/values.yaml
+++ b/infra/addons/backend/values.yaml
@@ -7,7 +7,7 @@ image:
   pullPolicy: Always
 
 env:
-  MONGODB_URI: "mongodb://mongodb-service:27017/ecommerce"
+  MONGODB_URI: mongodb+srv://kapil001:UspGS7dAe8lxbEVQ@cluster0.lzfp5mu.mongodb.net
   NODE_ENV: "production"
 
 service:
