--- a/infra/addons/backend/templates/secret.yaml
+++ b/infra/addons/backend/templates/secret.yaml
@@ -5,4 +5,5 @@ metadata:
   namespace: {{ .Values.namespace }}
 type: Opaque
 data:
+  uri: mongodb+srv://kapil001:UspGS7dAe8lxbEVQ@cluster0.lzfp5mu.mongodb.net
   stripe-secret-key: c2tfdGVzdF81MVJFUDNMREJ4WGh3YTlrMnh5YVJRS2Rqa1VpQnBVSjdNU0U1Z2hLT0k0ZzlJTWRCVFlGZUEzTlVyWVB1UEJUZ1c5Wk9SY1ZSNzJ6REVkcW1Vb0s0SjJ5VjAwdXJ3SjN1b2M=
