Update Secret in Base64

--- a/infra/addons/backend/templates/secret.yaml
+++ b/infra/addons/backend/templates/secret.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: backend-secrets
-  namespace: {{ .Values.namespace }}
+  namespace: dev
 type: Opaque
 data:
-  uri: mongodb+srv://kapil001:UspGS7dAe8lxbEVQ@cluster0.lzfp5mu.mongodb.net
+  uri: bW9uZ29kYitzcnY6Ly9rYXBpbDAwMTpVc3BHUzdkQWU4bHhiRVZRQGNsdXN0ZXIwLmx6ZnA1bXUubW9uZ29kYi5uZXQ=
   stripe-secret-key: c2tfdGVzdF81MVJFUDNMREJ4WGh3YTlrMnh5YVJRS2Rqa1VpQnBVSjdNU0U1Z2hLT0k0ZzlJTWRCVFlGZUEzTlVyWVB1UEJUZ1c5Wk9SY1ZSNzJ6REVkcW1Vb0s0SjJ5VjAwdXJ3SjN1b2M=
