--- a/infra/addons/prometheus-stack/values.yaml
+++ b/infra/addons/prometheus-stack/values.yaml
@@ -80,12 +80,12 @@ grafana:
   additionalDataSources:
     - name: Prometheus
       type: prometheus
-      url: http://prometheus-operated.monitoring.svc.cluster.local:9090
+      url: http://prometheus-stack-dev-kube-prom-prometheus.dev.svc.cluster.local:9090
       access: proxy
       isDefault: true
     - name: Loki
       type: loki
-      url: http://loki.dev.svc.cluster.local:3100
+      url: http://loki-dev-gateway.dev.svc.cluster.local:80
       access: proxy
       isDefault: false
     - name: Tempo
@@ -129,58 +129,40 @@ prometheus-node-exporter:
 
 
 app:
-  serviceMonitors: []
-# app:
-#   serviceMonitors:
-#     - name: sharkapp-frontend
-#       namespace: dev
-#       selector:
-#         matchLabels:
-#           app.kubernetes.io/instance: frontend-dev
-#           app.kubernetes.io/name: frontend
-#       additionalLabels:  # Ensure the label matches the selector
-#         release: prometheus-stack-dev
-#       endpoints:
-#         - port: http
-#           path: /metrics
-#           interval: 15s
-#           targetPort: 8000
-#           relabelings:
-#             - action: replace
-#               sourceLabels:
-#               - __meta_kubernetes_pod_namespace
-#               targetLabel: namespace
-#     - name: sharkapp-backend
-#       namespace: dev
-#       selector:
-#         matchLabels:
-#           app.kubernetes.io/instance: backend-dev  # Match the service label
-#           app.kubernetes.io/name: backend
-#       additionalLabels:
-#         release: prometheus-stack-dev
-#       endpoints:
-#         - port: http
-#           path: /metrics
-#           interval: 15s
-#           targetPort: 8000
-#           relabelings:
-#             - action: replace
-#               sourceLabels:
-#               - __meta_kubernetes_pod_namespace
-#               targetLabel: namespace
-#     - name: process-exporter
-#       namespace: dev
-#       selector:
-#         matchLabels:
-#           app: process-exporter
-#       additionalLabels:
-#         release: prometheus-stack-dev
-#       endpoints:
-#         - port: metrics
-#           path: /metrics
-#           interval: 15s
-#           relabelings:
-#             - action: replace
-#               sourceLabels:
-#               - __meta_kubernetes_pod_namespace
-#               targetLabel: namespace
+  serviceMonitors:
+    - name: sharkapp-frontend
+      namespace: dev
+      selector:
+        matchLabels:
+          app.kubernetes.io/instance: frontend-dev
+          app.kubernetes.io/name: frontend
+      additionalLabels:
+        release: prometheus-stack-dev
+      endpoints:
+        - port: http
+          path: /metrics
+          interval: 15s
+          targetPort: 8000
+          relabelings:
+            - action: replace
+              sourceLabels:
+              - __meta_kubernetes_pod_namespace
+              targetLabel: namespace
+    - name: sharkapp-backend
+      namespace: dev
+      selector:
+        matchLabels:
+          app.kubernetes.io/instance: backend-dev
+          app.kubernetes.io/name: backend
+      additionalLabels:
+        release: prometheus-stack-dev
+      endpoints:
+        - port: http
+          path: /metrics
+          interval: 15s
+          targetPort: 8000
+          relabelings:
+            - action: replace
+              sourceLabels:
+              - __meta_kubernetes_pod_namespace
+              targetLabel: namespace
