Update loki config

--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -1,94 +1,2 @@
-loki:
-  isDefault: false
-  auth_enabled: false
-  deploymentMode: SimpleScalable
-  backend:
-    replicas: 1
-  write:
-    replicas: 1
-  read:
-    replicas: 1
-  persistence:
-    enabled: true
-    size: 10Gi
-    accessModes:
-      - ReadWriteOnce
-    storageClassName: standard
-  commonConfig:
-    path_prefix: /var/loki
-    replication_factor: 1
-    storage:
-      filesystem:
-        directory: /var/loki/chunks
-  schemaConfig:
-    configs:
-      - from: "2024-01-01"
-        store: boltdb-shipper
-        object_store: filesystem
-        schema: v12
-        index:
-          prefix: loki_index_
-          period: 24h
-  structuredConfig:
-    storage_config:
-      boltdb_shipper:
-        active_index_directory: /var/loki/index
-        cache_location: /var/loki/index_cache
-        shared_store: filesystem
-      filesystem:
-        directory: /var/loki/chunks
-    schema_config:
-      configs:
-        - from: "2024-01-01"
-          store: boltdb-shipper
-          object_store: filesystem
-          schema: v12
-          index:
-            prefix: loki_index_
-            period: 24h
-  useTestSchema: false
-tableManager:
-  retention_deletes_enabled: false
-  retention_period: 0
-promtail:
-  enabled: true
-  config:
-    logLevel: info
-    clients:
-      - url: http://loki-gateway:80/loki/api/v1/push
-  pipelineStages:
-    - docker: {}
-  extraRelabelConfigs:
-    - source_labels: [__meta_kubernetes_pod_label_app]
-      target_label: app
-    - source_labels: [__meta_kubernetes_pod_namespace]
-      target_label: namespace
-    - source_labels: [__meta_kubernetes_pod_name]
-      target_label: pod
-  readinessProbe:
-    httpGet:
-      path: /ready
-      port: http-metrics
-    initialDelaySeconds: 30
-    timeoutSeconds: 5
-    periodSeconds: 10
-    successThreshold: 1
-    failureThreshold: 5
-monitoring:
-  enabled: false
-  dashboards:
-    enabled: false
-  rules:
-    enabled: false
-  serviceMonitor:
-    enabled: false
-  selfMonitoring:
-    enabled: false
-    grafanaAgent:
-      installOperator: false
-  lokiCanary:
-    enabled: false
-gateway:
-  enabled: true
-  replicas: 1
-  verboseLogging: true
+# Simple Loki configuration
+enabled: true
