--- a/infra/addons/loki/Chart.yaml
+++ b/infra/addons/loki/Chart.yaml
@@ -1,27 +1,6 @@
 apiVersion: v2
-name: loki-stack
-description: A Helm chart for deploying Loki and Promtail
+name: loki
+description: Simple Loki log aggregation
 type: application
-version: 0.1.0
-appVersion: "2.8.2"
-dependencies:
-  - name: loki
-    version: 5.47.2
-    repository: https://grafana.github.io/helm-charts
-  - name: promtail
-    version: "6.15.2"  # Use the latest available version
-    repository: "https://grafana.github.io/helm-charts"
-
-
-# apiVersion: v2
-# appVersion: "1.0"
-# description: A Helm chart for loki-stack
-# name: loki
-# version: 2.6.1
-# dependencies:
-#   - name: loki
-#     version: 6.7.4
-#     repository: https://grafana.github.io/helm-charts
-#   - name: promtail
-#     version: 6.16.4
-#     repository: https://grafana.github.io/helm-charts
+version: 1.0.0
+appVersion: "2.9.0"
