--- a/infra/addons/backend/values.yaml
+++ b/infra/addons/backend/values.yaml
@@ -1,30 +1,64 @@
+# Backend base configuration - minimal defaults only
+
 replicaCount: 1
-namespace: dev
 
 image:
   repository: kapilbhalodiya/ecom-backend
-  tag: "22-445f691"
-  pullPolicy: Always
+  tag: "latest"
+  pullPolicy: IfNotPresent
 
 env:
-  NODE_ENV: "production"
+  NODE_ENV: "development"
+  PORT: "8000"
 
 service:
   type: ClusterIP
   port: 8000
 
+# Minimal base resources
+resources:
+  requests:
+    cpu: "100m"
+    memory: "128Mi"
+  limits:
+    cpu: "500m"
+    memory: "512Mi"
+
+# Health checks
+livenessProbe:
+  httpGet:
+    path: /health
+    port: 8000
+  initialDelaySeconds: 30
+  periodSeconds: 10
+
+readinessProbe:
+  httpGet:
+    path: /ready
+    port: 8000
+  initialDelaySeconds: 10
+  periodSeconds: 5
+
+# Security
+securityContext:
+  runAsNonRoot: true
+  runAsUser: 1000
+
+# Monitoring
 metrics:
   enabled: true
   path: /metrics
   port: 8000
 
-tracing:
-  enabled: true
-  jaegerAgentHost: jaeger-agent
-  jaegerAgentPort: 6831
+# Database
+database:
+  host: mongodb
+  port: 27017
+  name: ecommerce
 
-slo:
-  enabled: false
-  objectives:
-    availability: 99.9
-    latency: 0.5
+# External services
+external:
+  stripe:
+    enabled: false
+  cloudinary:
+    enabled: false
