--- a/infra/addons/ingress/templates/ingress.yaml
+++ b/infra/addons/ingress/templates/ingress.yaml
@@ -2,19 +2,18 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "ingress.fullname" . }}
+  namespace: {{ .Values.namespace | default .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ include "ingress.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    {{- include "ingress.labels" . | nindent 4 }}
   annotations:
     {{- if .Values.tls.enabled }}
-    cert-manager.io/cluster-issuer: {{ .Values.clusterIssuer | quote }}
+    cert-manager.io/cluster-issuer: {{ .Values.tls.issuer | quote }}
     {{- end }}
     {{- range $key, $value := .Values.annotations }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
 spec:
-  ingressClassName: {{ .Values.ingressClass | quote }}
+  ingressClassName: {{ .Values.ingressClassName | quote }}
   {{- if .Values.tls.enabled }}
   tls:
   - hosts:
@@ -30,7 +29,7 @@ spec:
         pathType: {{ .pathType }}
         backend:
           service:
-            name: '{{ .serviceName }}-dev'
+            name: {{ .serviceName }}
             port:
               number: {{ .servicePort }}
       {{- end }}
