--- a/infra/config/prod/app/frontend/values.yaml
+++ b/infra/config/prod/app/frontend/values.yaml
@@ -1,5 +1,6 @@
 # Prod frontend - production overrides only
 
+namespace: prod
 replicaCount: 3
 
 image:
@@ -34,15 +35,8 @@ features:
 
 # Production security
 securityContext:
+  runAsNonRoot: true
+  runAsUser: 101
   readOnlyRootFilesystem: true
   capabilities:
     drop: ["ALL"]
-
-# Content Security Policy
-security:
-  csp:
-    enabled: true
-    directives:
-      default-src: "'self'"
-      script-src: "'self' 'unsafe-inline'"
-      style-src: "'self' 'unsafe-inline'"
